@@ -1,3 +1,9 @@
+2004-05-25  Daniel Elstner  <daniel.elstner@gmx.net>
+
+	* demos/pixbuf-demo.cc: Minor cleanups: use const double rather
+	than a macro for pi, no need to explicitly maintain the timeout
+	signal connection, and some other stuff.
+
 2004-05-23  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/gtkmm/comboboxentrytext.cc: Patch from Teemu Tervo to prevent 
